# doty

./: .claude.json  .gitignore  .sops.yaml  Makefile  README.md  flake.nix  rebuild.rs  rebuild.sh  win11.xml
.config/: starship.toml  starship.toml.template
.config/.gemini/config/: mcp_config.json
.config/Kvantum/Gruvbox/: Gruvbox.kvconfig  Gruvbox.kvconfig.template
.config/Kvantum/wabi/: wabi.kvconfig
.config/autostart/: ssh-add.desktop
.config/bat/: config
.config/bat/themes/: matugen.tmTheme  matugen.tmTheme.template
.config/btop/themes/: matugen.theme  matugen.theme.template
.config/cava/: config  config.template
.config/color-schemes/: Kvantum.colors.template
.config/eza/: theme.yml
.config/fastfetch/: cat.txt  config.jsonc
.config/fish/: config.fish  fish_variables
.config/fish/conf.d/: aliases.fish  functions.fish  fzf-colors.fish  fzf-colors.fish.template  matugen-colors.fish  matugen-colors.fish.template  wabi-env.fish  zerobrew.fish
.config/fish/functions/: gc.fish
.config/ghostty/: config
.config/ghostty/shaders/: cursor_warp.glsl
.config/ghostty/themes/: theme
.config/git/: colors  config
.config/gtk-3.0/: bookmarks  colors.css  gtk-dark.css  gtk.css  settings.ini
.config/gtk-4.0/: colors.css  colors.css.template  gtk-4.0  gtk-dark.css  gtk.css  settings.ini
.config/hypr/: hypridle.conf  hyprland.lua  hyprlock.conf  hyprlock.conf.template  hyprsunset.conf  xdph.conf
.config/hypr/Hyprspace/: hyprspace.lua
.config/hypr/modules/: autostart.lua  binds.lua  colors.lua  colors.lua.template  decorations.lua  env.lua  layout.lua  misc.lua  windowrules.lua
.config/hypr/wabi/: Cargo.toml  Makefile
.config/hypr/wabi/presets/: ayu-dark.toml  dracula.toml  everforest.toml  gruvbox-lite.toml  gruvbox-material-hard.toml  kanagawa.toml  one-dark.toml
.config/hypr/wabi/src/: battery.rs  lib.rs  media_db.rs
.config/hyprland-preview-share-picker/: config.yaml  style.css
.config/kilo/: config.json
.config/kitty/: current-theme.conf  current-theme.conf.template  kitty.conf
.config/lazygit/: config.yml  config.yml.template
.config/mako/: config  config.template
.config/mpd/: mpd.conf
.config/mpv/: mpv.conf
.config/nvim/: init.lua  init.lua.template  lazy-lock.json  lazyvim.json
.config/opencode/: antigravity.json  opencode.json
.config/opencode/themes/: matugen.json
.config/plasma-workspace/env/: ssh-agent-startup.sh
.config/pypr/: config.toml
.config/qt5ct/: qt5ct.conf  style-colors.conf
.config/qt6ct/: style-colors.conf
.config/quickshell/: Theme.qml  Theme.qml.template  screentime.db  screentime.db-shm  screentime.db-wal
.config/quickshell/apps_popup/: get_apps_list  get_github_repos  shell.qml
.config/quickshell/battery_popup/: battery_daemon  get_battery_status  get_battery_status.py  log_battery  log_battery.py  settings.json.template  shell.qml
.config/quickshell/bluetooth_popup/: get_bluetooth_status  shell.qml
.config/quickshell/brightness_popup/: get_brightness_status  shell.qml
.config/quickshell/clipboard_popup/: decode_cliphist.sh  shell.qml
.config/quickshell/colorscheme_popup/: PresetRow.qml  shell.qml
.config/quickshell/emoji_popup/: shell.qml
.config/quickshell/github_graph/: get_github_graph  shell.qml
.config/quickshell/helpers_rs/: Makefile
.config/quickshell/media_popup/: PreviewPanel.qml  PreviewWindow.qml  assets.db  assets.db-shm  assets.db-wal  flags.json  get_media_status  ping.txt  settings.json  shell.qml
.config/quickshell/network_popup/: get_network_status  shell.qml
.config/quickshell/notif_popup/: get_notif_status  shell.qml
.config/quickshell/osd/: shell.qml
.config/quickshell/podman_popup/: get_podman_status  shell.qml
.config/quickshell/power_popup/: shell.qml
.config/quickshell/profile_popup/: shell.qml
.config/quickshell/recents_popup/: get_recents_list  shell.qml
.config/quickshell/shortcut_popup/: Theme.qml  parse_binds  shell.qml
.config/quickshell/sunset_popup/: shell.qml
.config/quickshell/sysmon_popup/: get_sysmon_status  shell.qml
.config/quickshell/tray_popup/: shell.qml
.config/quickshell/vm_popup/: get_vm_status  shell.qml
.config/quickshell/volume_popup/: get_audio_status  shell.qml
.config/quickshell/wallpaper_switcher/: Theme.qml  shell.qml  wallpaper_thumb_watcher
.config/quickshell/workspace_overview/: shell.qml
.config/rofi/: colors.rasi  colors.rasi.template  config.rasi  theme.rasi
.config/satty/: config.toml  config.toml.template
.config/scripts/: theme_switcher
.config/swappy/: config
.config/tmux/: tmux.conf  tmux.conf.template
.config/vim/: vimrc  wabi.vim
.config/waybar/: colors.css.template  config.jsonc  style.css
.config/yazi/: theme.toml  theme.toml.template  yazi.toml
.config/zathura/: zathurarc  zathurarc.template
.config/zen/: README.md  user.js.template  userChrome.css.template  userContent.css.template  userContent.github.template
.copilot/: config.json  mcp-config.json
.gemini/: settings.json
.github/: README.md
modules/devshell/: default.nix
modules/gaming/: default.nix
modules/home/: default.nix
modules/scripts/: default.nix  ghostty_tmux  kbd_aura  set_wallpaper_bin  spotify-reload  theme_switcher  toggle_wallpaper_pause  toggle_waydroid
qemu/: win11.xml
scripts/: ghostty-tmux.sh  kbd_aura  presets_lister  rebuild_thunar.sh  set_wallpaper  set_wallpaper_bin  setup-zen-autoconfig.sh  theme_switcher  tmux-sessionizer
secrets/: secrets.yaml
wabi/: .gitignore  Cargo.toml  Makefile  rebuild.rs  update-zcode.py
wabi/presets/: catppuccin-latte.toml  catppuccin-mocha.toml  gruvbox.toml  monokai.toml  nord.toml  rose-pine.toml  solarized-dark.toml  tokyonight.toml
wabi/scripts/: kbd_aura  set_wallpaper_bin  theme_switcher
wabi/src/: lib.rs  media_db.rs  state_file.rs
(+328 files in other folders)
